--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,6 +10,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: enriikke/gatsby-gh-pages-action@v2
+
+      - name: npm install
+        run: npm install
+
+      - name: gatsby build
+        run: npm build
+
+      - name: deploy
+        uses: enriikke/gatsby-gh-pages-action@v2
         with:
           access-token: ${{ secrets.BLOG_TOKEN }}
